sundaland-backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sundaland-backend
  namespace: sundaland
  labels:
    app: sundaland-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sundaland-backend
  template:
    metadata:
      labels:
        app: sundaland-backend
    spec:
      containers:
      - name: sundaland-backend
        image: registry.cri.epita.fr/ing/majeures/tc/info/sundaland/sundaland-backend:1.0.0
        ports:
        - containerPort: 8080
