sundaland-backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sundaland-backend
  namespace: sundaland
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: sundaland-backend
