sundaland-backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sundaland-backend
  namespace: sundaland
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: backend.sundaland.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: sundaland-backend
            port:
              number: 8080
